--- a/src/ng-vcl/zoom-box/zoom-box-magnifier.component.html
+++ b/src/ng-vcl/zoom-box/zoom-box-magnifier.component.html
@@ -1,10 +1,10 @@
 <div style="position: relative;">
-  <img #img style="position: relative;" [src]="image" (mousemove)="onMove($event)" (mouseout)="onOut()">
+  <img #img style="position: relative;" [src]="image" (mousemove)="onMove($event)" (mouseover)="onOver()" (mouseout)="onOut()">
 
   <div class="vclZoomBoxMagnifier" [ngStyle]="{
   'top': y + 'px',
   'left': x + 'px',
   'width': width + 'px',
   'height': height + 'px',
-  'pointer-events': 'none'}"></div>
+  'pointer-events': 'none'}" *ngIf="!hiding && !invisible"></div>
 </div>
