Unwrap gallery header component

--- a/demo/src/demos/gallery/demo.component.html
+++ b/demo/src/demos/gallery/demo.component.html
@@ -4,7 +4,10 @@
   <vcl-gallery-image image="https://picsum.photos/600/500?image=452" thumbnail="https://picsum.photos/200/200?image=452" alt="Image 3"></vcl-gallery-image>
   <vcl-gallery-image image="https://picsum.photos/600/500?image=453" thumbnail="https://picsum.photos/200/200?image=453" alt="Image 4"></vcl-gallery-image>
 
-  <vcl-gallery-header galleryTitle="Simple gallery"></vcl-gallery-header>
+  <div class="vclGalleryHeader">
+    <h2>Simple gallery</h2>
+  </div>
+
   <vcl-gallery-body></vcl-gallery-body>
   <vcl-gallery-footer></vcl-gallery-footer>
   <vcl-gallery-thumbnails></vcl-gallery-thumbnails>
@@ -17,7 +20,10 @@
   <vcl-gallery-image image="https://picsum.photos/600/500?image=442" thumbnail="https://picsum.photos/200/200?image=442" alt="Image 3"></vcl-gallery-image>
   <vcl-gallery-image image="https://picsum.photos/600/500?image=443" thumbnail="https://picsum.photos/200/200?image=443" alt="Image 4"></vcl-gallery-image>
 
-  <vcl-gallery-header galleryTitle="Gallery with wrapping"></vcl-gallery-header>
+  <div class="vclGalleryHeader">
+    <h2>Gallery with wrapping</h2>
+  </div>
+
   <vcl-gallery-body></vcl-gallery-body>
   <vcl-gallery-footer></vcl-gallery-footer>
   <vcl-gallery-thumbnails></vcl-gallery-thumbnails>
@@ -32,10 +38,6 @@
   <vcl-gallery-image image="https://picsum.photos/600/500?image=432" thumbnail="https://picsum.photos/200/200?image=432" alt="Image 3"></vcl-gallery-image>
   <vcl-gallery-image image="https://picsum.photos/600/500?image=433" thumbnail="https://picsum.photos/200/200?image=433" alt="Image 4"></vcl-gallery-image>
 </vcl-gallery>
-
-<h3>Header:</h3>
-<vcl-gallery-header [target]="external" galleryTitle="Gallery with external components"></vcl-gallery-header>
-<br><br>
 
 <h3>Body:</h3>
 <vcl-gallery-body [target]="external"></vcl-gallery-body>
