Implement offClick for mashup

--- a/demo/src/demos/form-mashups/demo.component.html
+++ b/demo/src/demos/form-mashups/demo.component.html
@@ -5,7 +5,7 @@
   <button vcl-button prepIcon="fa:chevron-down" (tap)="dropOver.toggle()"></button>
 </div>
 
-<vcl-popover #dropOver [target]="target" class="vclNoPadding">
+<vcl-popover #dropOver [target]="target" class="vclNoPadding" (offClick)="offClick()">
   <vcl-dropdown (change)="onSelect($event)">
     <vcl-dropdown-option *ngFor="let i of [0, 1, 2, 3, 4]" [value]="i" [selected]="i == 1" label="Item {{ i }}"></vcl-dropdown-option>
   </vcl-dropdown>
