--- a/demo/src/demos/notification/demo.component.html
+++ b/demo/src/demos/notification/demo.component.html
@@ -13,7 +13,7 @@
 <br>
 
 <h3>Warning notification with header and button</h3>
-<vcl-notification nType="warning" header="Some header" button="fa:times" [buttonClick]="click">
+<vcl-notification nType="warning" header="Some header" button="fa:times" (buttonClick)="click()">
   <ul>
     <li>The following users could not be found:
       <ul>
@@ -26,7 +26,7 @@
 <br>
 
 <h3>Error notification without a header and with a button</h3>
-<vcl-notification nType="error" button="fa:times" [buttonClick]="click">
+<vcl-notification nType="error" button="fa:times" (buttonClick)="click()">
   <ul>
     <li>Please enter a valid <strong>E-Mail ID</strong>.</li>
     <li>Please enter a valid <strong>Password</strong>.</li>
@@ -39,7 +39,7 @@
 <br>
 
 <h3>Notification without an icon</h3>
-<vcl-notification nType="warning" [drawIcon]="false" button="fa:times" [buttonClick]="click">Oops! Something went wrong!</vcl-notification>
+<vcl-notification nType="warning" [drawIcon]="false" button="fa:times" (buttonClick)="click()">Oops! Something went wrong!</vcl-notification>
 <br>
 
 <h3>Notification with custom html in the header and footer</h3>
