--- a/src/ng-vcl/month-picker/month-picker.component.html
+++ b/src/ng-vcl/month-picker/month-picker.component.html
@@ -5,38 +5,43 @@
     [attr.aria-multiselectable]="maxSelectableMonths > 1"
     [attr.aria-expanded]="expanded">
 
-    <div class="vclLayoutFlex vclDGRow vclLayoutAuto">
-      <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
-        <button vcl-button class="vclButton vclTransparent vclSquare"
-          type="button"
-          [class.vclDisabled]="!prevYearAvailable"
-          [appIcon]="prevYearBtnIcon"
-          (click)="onPrevYearTap()">
-        </button>
+    <div class="vclDGRow">
+      <div class="vclToolbar vclLayoutHorizontal vclLayoutFlex vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+        <div class="vclLayoutHorizontal vclLayoutCenter">
+          <button vcl-button class="vclButton vclTransparent vclSquare vclLayoutHorizontal vclLayoutCenterCenter"
+            type="button"
+            [class.vclDisabled]="!prevYearAvailable"
+            [appIcon]="prevYearBtnIcon"
+            (click)="onPrevYearTap()">
+          </button>
 
-        <span class="vclCalHeaderLabel">{{ currentYear }}</span>
+          <span class="vclCalHeaderLabel">{{ currentYear }}</span>
 
-        <button vcl-button
-          type="button"
-          class="vclButton vclTransparent vclSquare"
-          [class.vclDisabled]="!nextYearAvailable"
-          [appIcon]="nextYearBtnIcon"
-          (click)="onNextYearTap()">
-        </button>
+          <button vcl-button
+            type="button"
+            class="vclButton vclTransparent vclSquare vclLayoutHorizontal vclLayoutCenterCenter"
+            [class.vclDisabled]="!nextYearAvailable"
+            [appIcon]="nextYearBtnIcon"
+            (click)="onNextYearTap()">
+          </button>
+        </div>
 
-        <button vcl-button *ngIf="expandable"
-          type="button"
-          class="vclButton vclTransparent vclSquare"
-          [appIcon]="closeBtnIcon"
-          (click)="onCloseBtnTap()">
-        </button>
+        <div class="vclLayoutHorizontal vclLayoutFlex vclLayoutEndJustified">
+          <button vcl-button *ngIf="expandable"
+            type="button"
+            class="vclButton vclTransparent vclSquare vclLayoutHorizontal vclLayoutCenterCenter"
+            [appIcon]="closeBtnIcon"
+            (click)="onCloseBtnTap()">
+          </button>
+        </div>
+
       </div>
     </div>
 
     <div class="vclSeparator"></div>
 
     <ng-template ngFor let-iM [ngForOf]="months" let-i="index">
-      <div *ngIf="i % monthsPerRow === 0" class="vclLayoutFlex vclDGRow vclLayoutAuto" role="row">
+      <div *ngIf="i % monthsPerRow === 0" class="vclDGRow" role="row">
         <div *ngFor="let jM of months.slice(i, (i + monthsPerRow > months.length ? months.length : i + monthsPerRow)); let j = index;"
           (click)="selectMonth(currentYear, i+j)"
           class="vclDGCell vclCalItem"
@@ -49,8 +54,8 @@
           [style.background-color]="currentMeta[i+j].color"
           [style.order]="i+j"
           [attr.aria-selected]="currentMeta[i+j].selected || currentMeta[i+j].preselected"
-          role="gridcell"
-          tabindex="0">
+          [tabindex]="i+j"
+          role="gridcell">
             <div class="vclLayoutHorizontal vclLayoutCenterJustified vclMonthPickerListItemLabel">
               {{months[i + j]}}
             </div>
