checkbox: align html structure with VCL + remove labelposition top

--- a/demo/src/demos/checkbox/demo.component.html
+++ b/demo/src/demos/checkbox/demo.component.html
@@ -9,20 +9,15 @@
 <h3>Checkbox with label:</h3>
 <h4>right (default)</h4>
 <vcl-checkbox [(checked)]="isChecked2">
-  <label vcl-form-control-label label="RightLabel" subLabel="RightSubLabel"></label>
+  RightLabel
 </vcl-checkbox>
 
 <h4>left</h4>
 <vcl-checkbox [(checked)]="isChecked3" labelPosition="left">
-  <label vcl-form-control-label label="LeftLabel" subLabel="LeftSubLabel"></label>
-</vcl-checkbox>
-
-<h4>top</h4>
-<vcl-checkbox [(checked)]="isChecked4" labelPosition="top">
-  <label vcl-form-control-label label="TopLabel" subLabel="TopSubLabel"></label>
+  LeftLabel
 </vcl-checkbox>
 
 <h3>Checkbox (ngModel):</h3>
-<vcl-checkbox [(ngModel)]="isChecked5"></vcl-checkbox>
+<vcl-checkbox [(ngModel)]="isChecked4"></vcl-checkbox>
 <br>
 <b>State:</b> {{isChecked4}}
