--- a/src/ng-vcl/checkbox/checkbox.component.html
+++ b/src/ng-vcl/checkbox/checkbox.component.html
@@ -1,4 +1,19 @@
-  <vcl-icon [icon]="icon" *ngIf="labelPosition == 'right'" [@checkState]="checked"></vcl-icon>
-  <ng-content></ng-content><br *ngIf="labelPosition=='top'"/>
-  <vcl-icon [icon]="icon" *ngIf="labelPosition != 'right'"></vcl-icon>
+<ng-template #cb>
+  <div class="vclCheckbox" 
+      [class.vclDisabled]="disabled" 
+      role="checkbox" 
+      [attr.tabindex]="tabindex" 
+      [attr.aria-checked]="checked"
+      [attr.aria-disabled]="checked"
+      (keyup)="onKeyup($event)"
+      (blur)="onBlur()"
+      >
+  <div vcl-icon [icon]="icon"></div>
+</div>  
+</ng-template>
 
+<label vcl-form-control-label [wrapping]="true">
+  <ng-container *ngIf="labelPosition==='right'" [ngTemplateOutlet]="cb"></ng-container>
+  <ng-content></ng-content>
+  <ng-container *ngIf="labelPosition==='left'" [ngTemplateOutlet]="cb"></ng-container>
+</label>
