--- a/src/ng-vcl/checkbox/checkbox.component.html
+++ b/src/ng-vcl/checkbox/checkbox.component.html
@@ -4,7 +4,7 @@
       role="checkbox" 
       [attr.tabindex]="tabindex" 
       [attr.aria-checked]="checked"
-      [attr.aria-disabled]="checked"
+      [attr.aria-disabled]="disabled"
       (keyup)="onKeyup($event)"
       (blur)="onBlur()"
       >
