form-control-label: better content detection

--- a/src/ng-vcl/form-control-label/form-control-label.component.html
+++ b/src/ng-vcl/form-control-label/form-control-label.component.html
@@ -3,5 +3,5 @@
   {{requiredIndicatorCharacter}}
 </em>
 <span *ngIf="subLabel" class="vclFormControlSubLabel">{{subLabel | loc}}</span>
-<!--<span #content><ng-content></ng-content></span> -->
+<!-- <span #content></span> -->
 <ng-content></ng-content>
