button: use span icogram

--- a/src/ng-vcl/button/button.component.html
+++ b/src/ng-vcl/button/button.component.html
@@ -1,4 +1,4 @@
-<div vcl-icogram
+<span vcl-icogram
   [label]="label"
   [flexLabel]="flexLabel"
   [prepIcon]="prepIcon"
@@ -6,4 +6,4 @@
   [appIconSrc]="appIconSrc"
   [prepIconSrc]="prepIconSrc">
   <ng-content></ng-content>
-</div>
+</span>
