--- a/demo/src/demos/navigation/demo.component.html
+++ b/demo/src/demos/navigation/demo.component.html
@@ -1,6 +1,6 @@
 <h3>Horizontal navigation</h3>
 
-<vcl-navigation #nav1 (navigate)="onNavigate($event)" type="horizontal">
+<nav vcl-navigation #nav1 (navigate)="onNavigate($event)" type="horizontal">
   <vcl-navitem label="Home" prepIcon="fa:home" [route]="['/']"></vcl-navitem>
   <vcl-navitem label="Products" prepIcon="fa:bicycle" [route]="['/products']"></vcl-navitem>
   <vcl-navitem label="Contact" prepIcon="fa:envelope" [route]="['/contact']"></vcl-navitem>
@@ -12,14 +12,14 @@
 
 <h3>Vertical navigation</h3>
 
-<vcl-navigation #nav2 type="vertical" (navigate)="onNavigate($event)">
+<nav vcl-navigation #nav2 type="vertical" (navigate)="onNavigate($event)">
   <vcl-navitem label="Home" [route]="['/']"></vcl-navitem>
   <vcl-navitem label="Products" appIcon="fa:bicycle">
     <vcl-navitem label="Product 1" [route]="['/product', 1]"></vcl-navitem>
     <vcl-navitem label="Product 2" [route]="['/product', 2]"></vcl-navitem>
   </vcl-navitem>
   <vcl-navitem label="Contact" [route]="['/contact']"></vcl-navitem>
-</vcl-navigation>
+</nav>
 <br>
 
 <button vcl-button (click)="nav2.selectRoute(['/product', 2], true)" label="Select Product 2"></button>
