--- a/demo/src/demos/form/demo.component.html
+++ b/demo/src/demos/form/demo.component.html
@@ -19,7 +19,7 @@
 
   <div class="vclInputControlGroup">
     <vcl-checkbox formControlName="checkbox">
-      <label vcl-form-control-label label="vcl-checkbox"></label>
+      vcl-checkbox
     </vcl-checkbox>
   </div>
 
